# llm-wiki

./: .env.example  .env.postgres  .gitignore  .python-version  CHANGELOG.md  Dockerfile  LICENSE  OKF-SPEC.md  README.md  SKILL.md  docker-compose.yml  karpathy-llm-wiki.md  llm-wiki.py  open_web.sh  pyproject.toml  test_cors.py  test_cors_curl.sh  test_timeline_iframe.html  企业知识库核心能力标准、选型打分清单及私有化产品选型方案.md  企业知识库评分与差距分析报告.md  信创详解与适配成本分析.md
.claude/: project.md
.claude/plans/: PLAN-002-execution-report-2026-06-22.md  PLAN-002-final-completion-report.md  PLAN-002-fix-plan-segments.md  PLAN-002-fix-plan.md  PLAN-002-review-summary.md  PLAN-003-COMPLETION-REPORT.md  PLAN-003-phase3-ux-enhancement.md  PLAN-003-prerequisites-check.md  PLAN-009-COMPLETION-SUMMARY.md  PLAN-009-database-validation.md  PLAN-009-execution-progress.md  PLAN-009-final-report.md  PLAN-009-input-validation-report.md  PLAN-010-COMPLETION-REPORT.md  PLAN-010-FINAL-REPORT.md  PLAN-010-PROGRESS.md  PLAN-010-VERIFICATION-REPORT.md  PROJECT-COMPLETION-SUMMARY.md  WEB-USAGE-GUIDE.md  enterprise-discussion-log.md  enterprise-overall-plan.md  fix-report-2026-06-22.md  health-report-2026-06-22.md
.claude/rules/: SKILL.md  agents.md  coding-style.md  communication.md  everything-claude-code.md  helpers.md  hooks.md  performance.md  security.md  testing.md
.github/: dependabot.yml
.github/workflows/: security-audit.yml  test.yml
.llm-wiki/: config.json  registry.json
.serena/: project.yml
Doc/: API.md  ARCH-enterprise-llm-wiki.md  CORS-CONFIGURATION.md  CORS-IMPLEMENTATION-REPORT.md  DEPLOY.md  MIGRATION.md  UI-UX-改造方案.md  design.md  encryption-guide.md  feishu-ai-knowledge-base-insights.md  feishu-insights-quick-reference.md
Doc/plans/: PLAN-000-enterprise-overall-plan.md  PLAN-001-postgresql-migration-segments.md  PLAN-001-postgresql-migration.md  PLAN-001-父子知识库架构-segments.md  PLAN-001-父子知识库架构.md  PLAN-001-知识库互动增强-segments.md  PLAN-001-知识库互动增强.md  PLAN-002-WebUI静态整合.md  PLAN-002-execution-report-task-group-13-19.md  PLAN-002-execution-report-task-group-9-12.md  PLAN-002-fix-plan-segments.md  PLAN-002-双模式架构与多级知识库-segments.md  PLAN-002-双模式架构与多级知识库.md  PLAN-003-phase3-ux-enhancement-segments.md  PLAN-003-phase3-ux-enhancement.md  PLAN-004-phase3-api-layer-refactor.md  PLAN-004-postgresql-production-integration.md  PLAN-005-casdoor-sso-integration-segments.md  PLAN-005-casdoor-sso-integration.md  PLAN-006-mobile-optimization-segments.md  PLAN-006-mobile-optimization.md  PLAN-007-test-coverage-segments.md  PLAN-007-test-coverage.md  PLAN-008-online-preview-segments.md  PLAN-008-online-preview.md  PLAN-009-data-encryption-segments.md  PLAN-009-data-encryption.md  PLAN-010-spa-refactoring-segments.md  PLAN-010-spa-refactoring.md  PLAN-M-011-管理工具区SPA迁移-segments.md  PLAN-M-011-管理工具区SPA迁移.md  PLAN-M-012-侧边栏治理与UI组件化-segments.md  PLAN-M-012-侧边栏治理与UI组件化.md  PLAN-M-013-UIUX靛蓝专业克制改造-segments.md  PLAN-M-013-UIUX靛蓝专业克制改造.md  PLAN-NAMING-CONVENTION.md  README.md
config/: storage.example.yaml
examples/nextcloud-kb/: index.md
lib/: __init__.py  ai_helper.py  analytics.py  api_server.py  audit.py  auth.py  backup.py  batch_ops.py  cache.py  cli_commands.py  constants.py  discovery.py  exporter.py  feedback.py  fts_index.py  importer.py  indexer.py  ingestor.py  initializer.py  lifecycle.py  logging_config.py  multi_format_parser.py  querier.py  quick_capture.py  registry.py  semantic.py  timeline.py  validator.py  visualizer.py  watcher.py  web_data.py  web_server.py  web_ui.py  workflow.py  yaml_parser.py
lib/api/: __init__.py  error_handler.py  image_api.py  kb_management.py  member_api.py  ocr_api.py  permission_api.py  preview_api.py  search_api.py  validators.py
lib/audit/: __init__.py  audit_logger.py
lib/auth/: __init__.py  auth_middleware.py  cache_manager.py  casdoor_client.py  casdoor_config.py  permission_decorator.py  permission_middleware.py  rbac.py  rbac_model.py  rls_manager.py  session_manager.py  sso_provider.py  user_sync.py
lib/core/: __init__.py  config.py  db_manager.py  db_storage.py  factory.py  file_storage.py  hierarchy.py  postgres_manager.py  sqlite_manager.py  storage_interface.py  transaction.py
lib/db/: __init__.py  functions.sql  indexes.sql  init_db.py  rls.sql  schema.sql
lib/media/: __init__.py  image_storage.py  thumbnail.py
lib/migration/: __init__.py  cli.py  migrate.py  validators.py
lib/ocr/: __init__.py  paddle_ocr.py  result_store.py  task_queue.py
lib/preview/: __init__.py  cache_manager.py  office_viewer.py
lib/search/: __init__.py  engine.py  highlight.py  hybrid_search.py  postgres_search.py  suggest.py  summary.py  vector_search.py
lib/utils/: __init__.py  encryption.py  error_handler.py  input_validator.py  log_sanitizer.py  path_validator.py  query_optimizer.py  rate_limiter.py  sql_validator.py
plans/gate-reports/: close-2026-06-25-M012.md  close-2026-06-25.md
scripts/: fast_update_graph.sh  incremental_update_graph.py  init-casdoor.py  update_graph.sh
static/css/: preview.css
templates/: preview.html
test-graph-kb/: OKF.yaml
tests/: conftest.py  test_analytics.py  test_auth_middleware.py  test_backup.py  test_batch_ops.py  test_cache.py  test_discovery.py  test_error_handler.py  test_error_handler_independent.py  test_exporter.py  test_feedback.py  test_fts_index.py  test_ingestor.py  test_input_validator_independent.py  test_lifecycle.py  test_logging_sanitization.py  test_multi_format_parser.py  test_password_hash.py  test_path_validator_standalone.py  test_querier.py  test_query_optimizer_independent.py  test_rate_limiter.py  test_rbac_independent.py  test_rbac_persistence.py  test_registry.py  test_sql_injection.py  test_sql_validator.py  test_sql_validator_independent.py  test_sql_validator_standalone.py  test_state.js  test_timeline.py  test_validators.py  test_watcher.py  test_workflow.py  test_yaml_parser.py  verify_path_traversal_protection.py
views/: graph.js  index.html  login.html  manifest.json  mockup.html  public.html  share.html  sso-callback.html  sw.js  test-modules.html  test-sidebar.html  timeline.html
(+175 files in other folders)
