[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "1.0.0"
description = "OKF (Open Knowledge Format) Knowledge Base Management System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Tiandiyiqi", email = "tiandiyiqi@example.com"}
]
keywords = ["knowledge-base", "wiki", "llm", "okf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pyyaml>=6.0,<7.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<14.0",
    "watchdog>=3.0,<7.0",
    "asyncpg>=0.28,<1.0",
    "aiosqlite>=0.19,<1.0",
    "chromadb>=0.4.0,<1.0",
    "sentence-transformers>=2.2.0,<4.0",
    "flask>=3.0,<4.0",
    "flask-cors>=4.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "bcrypt>=4.0.0,<5.0.0",
    "cryptography>=41.0.0,<44.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.0,<7.0",
    "ruff>=0.1.0,<1.0",
    "pyright>=1.1.0,<2.0",
    "mypy>=1.0,<2.0",
    "pip-audit>=0.2.0,<3.0",
    "bandit>=1.7.0,<2.0",
    "safety>=2.0.0,<4.0",
]
postgres = [
    "asyncpg>=0.28,<1.0",
    "psycopg2-binary>=2.9,<3.0",
]
vector = [
    "chromadb>=0.4.0,<1.0",
    "sentence-transformers>=2.2.0,<4.0",
]
ocr = [
    "paddleocr>=2.7.0,<3.0",
    "paddlepaddle>=2.5.0,<3.0",
    "Pillow>=10.0.0,<12.0",
]
preview = [
    "httpx>=0.24.0,<1.0",
]
celery = [
    "celery>=5.3.0,<6.0",
    "redis>=5.0.0,<6.0",
]

[project.scripts]
llm-wiki = "llm_wiki:main"

[project.urls]
Homepage = "https://github.com/tiandiyiqi/llm-wiki"
Repository = "https://github.com/tiandiyiqi/llm-wiki"
Documentation = "https://github.com/tiandiyiqi/llm-wiki#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["lib"]
exclude = ["**/__pycache__", "**/tests"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["lib"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
